# Rocket_Vertical_Landing

./: .gitignore  README.md  conftest.py  main.py
docs/: Answers.md  Question1.md
src/control/: compute_gains.py  controller.py  pid.py
src/embedded/: CMakeLists.txt  README.md
src/embedded/include/: GNCController.hpp  PID.hpp
src/embedded/src/: GNCController.cpp
src/embedded/tests/: test_gnc_embedded.cpp
src/helper/: grid_search.py  plots.py  run_envelope.py  run_grid.py  sim.py
src/model/: integrator.py  rocket.py  sim.py
src/script/: create_animation.py  run_envelope.py  run_flight.py  run_grid.py
tests/: test_all_controllers.py  test_altitude_controller.py  test_attitude_controller.py  test_physics.py
